--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <a href="user_listing_page.php" target="_blank">User Listing</a>
+    <a href="user_listing_page.php">User Listing</a>
 
 </body>
 
