--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+    <meta http-equiv="refresh" content="2; url=user_listing_page.php" />
     <title></title>
 </head>
 
 <body>
 
-    <a href="../user_listing_page.php">User Listing</a>
+
 
 </body>
 
