--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="2; url=user_listing_page.php" />
+    <meta http-equiv="refresh" content="2; url=https://yushma.github.io/PHPJqueryAjax/user_listing_page.php" />
     <title></title>
 </head>
 
