--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="2; url=https://yushma.github.io/PHPJqueryAjax/user_listing_page.php" />
+
     <title></title>
 </head>
 
 <body>
 
-
+    <a href="https://yushma.github.io/PHPJqueryAjax/user_listing_page.php">User Listing</a>
 
 </body>
 
